# ComfyUI_MD_Nodes

./: .gitignore  APG_Guider_Forked.py  AdvancedMediaSave.py  Hybrid_Sigma_Scheduler.py  LICENSE.md  NoiseDecayScheduler_Custom.py  PingPongSampler_Custom.py  PingPongSampler_Custom_FBG.py  README.md  SCENE_GENIUS_AUTOCREATOR.py  UniversalGuardian.py  WildcardPromptBuilder.py  __init__.py  comfyui.json  pyproject.toml  requirements.txt  seed_saver_node.py
MD_Nodes/: NoiseDecayScheduler_Custom.py  PingPongSampler_Custom.py  SCENE_GENIUS_AUTOCREATOR.py  __init__.py
audio/: AdvancedAudioPreviewAndSave.py  MD_AutoMasterNode.py  auto_eq.py  mastering_chain_node.py
conditioning/: ACE_T5_Conditioning_Node.py  ace_text_cleaners.py  spiece_tokenizer.py
core/: io.py
guiders/: MD_ApplyTPG.py
latent/: ACE_LATENT_VISUALIZER.py
manuals/: ACE_LATENT_VISUALIZER.md  APG_Guider_Forked.md  AdvancedAudioPreviewAndSave.md  Advanced_Media_Save.md  Hybrid_Sigma_Scheduler.md  MD_Seed_Saver_Manual.md  Master Technical Manual_ ACE Latent Visualizer.md  Master Technical Manual_ APG Guider (Forked).md  Master Technical Manual_ Advanced Audio Preview & Save (AAPS).md  Master Technical Manual_ Advanced Media Save (AMS).md  Master Technical Manual_ Advanced Noise Decay Scheduler.md  Master Technical Manual_ Custom Audio Mastering Chain.md  Master Technical Manual_ Hybrid Sigma Scheduler.md  Master Technical Manual_ MD Advanced Text.md  Master Technical Manual_ MD Apply TPG (Token Perturbation).md  Master Technical Manual_ MD Audio Auto EQ.md  Master Technical Manual_ MD Seed Saver.md  (+13 more)
(+80 files in other folders)
