[project]
version = "1.4.4"
dependencies = [
    "Jinja2",
    "MarkupSafe",
    "filelock",
    "fsspec",
    "imageio",
    "librosa",
    "lmstudio",
    "matplotlib",
    "mpmath",
    "networkx",
    "ollama",
    "pedalboard",
    "piexif",
    "pykakasi",
    "pyloudnorm",
    "requests",
    "scipy",
    "sentencepiece",
    "sympy",
    "tokenizers",
    "tqdm",
]
