[project]
version = "1.5.1"
dependencies = [
    "Jinja2",
    "MarkupSafe",
    "av",
    "bitsandbytes",
    "filelock",
    "fsspec",
    "imageio",
    "librosa",
    "lion_pytorch",
    "lmstudio",
    "matplotlib",
    "mpmath",
    "networkx",
    "ollama",
    "pedalboard",
    "piexif",
    "prodigyopt",
    "pykakasi",
    "pyloudnorm",
    "requests",
    "scipy",
    "sentencepiece",
    "sympy",
    "tokenizers",
    "tqdm",
]
